# bop

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: aur-publish.yml  ci.yml  nix.yml  release.yml
docs/plans/: 2026-02-25-status-command-design.md  2026-02-25-status-command.md
man/: bop-apply.1  bop-audit.1  bop-completions.1  bop-monitor.1  bop-revert.1  bop-status.1  bop-wake-disable.1  bop-wake-enable.1  bop-wake-list.1  bop-wake-scan.1  bop-wake.1  bop.1
pkg/aur/: PKGBUILD
src/: auto.rs  brightness.rs  cli.rs  config.rs  error.rs  inhibitors.rs  lib.rs  main.rs  notify.rs  preset.rs  snapshot.rs  sysfs.rs
src/apply/: kernel_params.rs  mod.rs  services.rs  sysfs_writer.rs  systemd.rs
src/audit/: audio.rs  cpu_power.rs  display.rs  gpu_power.rs  kernel_params.rs  mod.rs  network_power.rs  pci_power.rs  services.rs  sleep.rs  sysctl.rs  usb_power.rs
src/detect/: ac.rs  battery.rs  cpu.rs  dmi.rs  gpu.rs  mod.rs  network.rs  pci.rs  platform.rs
src/monitor/: mod.rs  power_draw.rs
src/output/: mod.rs
src/profile/: framework16_amd.rs  generic_laptop.rs  mod.rs
src/revert/: mod.rs
src/status/: mod.rs
src/wake/: mod.rs
tests/: sysfs_mock.rs
tests/fixtures/: framework16_amd.json
