[package]
name = "bop"
version = "0.1.0"
edition = "2024"
description = "Battery Optimization Project - hardware-aware power tuning for Linux laptops"
license = "MIT"
repository = "https://github.com/yv-was-taken/bop"
homepage = "https://github.com/yv-was-taken/bop"
readme = "README.md"
keywords = ["battery", "power", "linux", "framework", "optimization"]
categories = ["command-line-utilities", "hardware-support"]
default-run = "bop"
exclude = [
    "CLAUDE.md",
    "AGENTS.md",
    ".claude/",
    ".github/",
    "docs/",
    "pkg/",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
colored = "3"
indicatif = "0.17"
nix = { version = "0.29", features = ["fs", "process", "user"] }
chrono = "0.4"
dirs = "6"

[dev-dependencies]
tempfile = "3"
