[package]
name = "bop"
version = "0.3.0"
edition = "2024"
description = "Battery Optimization Project - hardware-aware power tuning for Linux laptops"
license = "MIT"
repository = "https://github.com/yv-was-taken/bop"
homepage = "https://github.com/yv-was-taken/bop"
readme = "README.md"
keywords = ["battery", "power", "linux", "framework", "optimization"]
categories = ["command-line-utilities", "hardware-support"]
default-run = "bop"
exclude = [
    "CLAUDE.md",
    "AGENTS.md",
    ".claude/",
    ".github/",
    "docs/",
    "pkg/",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
colored = "3"
indicatif = "0.17"
nix = { version = "0.29", features = ["fs", "process", "user"] }
chrono = "0.4"
dirs = "6"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[package.metadata.deb]
maintainer = "bop contributors <https://github.com/yv-was-taken/bop>"
copyright = "2024-2026, bop contributors"
license-file = ["LICENSE", "0"]
depends = "iw"
section = "utils"
priority = "optional"
extended-description = """Hardware-aware battery optimization for Linux laptops. \
Audits your system for power waste, applies fixes, auto-switches on AC/battery, \
and lets you undo everything. Built for Framework Laptop 16 (AMD Ryzen 7040)."""
assets = [
    ["target/release/bop", "usr/bin/", "755"],
    ["man/*.1", "usr/share/man/man1/", "644"],
    ["target/completions/bop.bash", "usr/share/bash-completion/completions/bop", "644"],
    ["target/completions/_bop", "usr/share/zsh/vendor-completions/", "644"],
    ["target/completions/bop.fish", "usr/share/fish/vendor_completions.d/", "644"],
]
